# lex

./: .dockerignore  .env.example  .gitignore  Dockerfile  KODA.md  Makefile  README.md  cache.py  csrf.py  database.py  docker-compose.yml  main.py  migrate.py  models.py  pyproject.toml  rate_limiter.py  sonar-project.properties  test_auth.py  test_cache.py  test_csrf.py  test_rate_limiter.py  test_validators.py  translator.py
.agents/skills/semver-checker/: SKILL.md
.github/workflows/: ci.yml
.koda/plans/: cleanup-old-server.md  local-first-roadmap.md  phase-0-architecture-tech-stack.md  phase-1-translate-proxy.md  phase-2-client-data-layer.md  phase-3-domain-logic.md  phase-4-client-ui-i18n.md  phase-5-pwa.md  phase-6-android-capacitor.md  phase-7-desktop-tauri.md  phase-8-migration-decommission.md
client/: .gitignore  capacitor.config.ts  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
client/android/app/: build.gradle
client/src/: index.css  main.tsx
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/capabilities/: default.json
client/src-tauri/icons/: icon.icns
client/src-tauri/src/: lib.rs  main.rs
client/src/components/: Layout.tsx  OfflineIndicator.tsx
client/src/data/: db.ts  settingsRepository.test.ts  settingsRepository.ts  wordRepository.test.ts  wordRepository.ts
client/src/domain/: srs.test.ts  srs.ts  stats.test.ts  stats.ts  validators.test.ts  validators.ts
client/src/i18n/: en.json  index.test.ts  index.ts  languages.ts  ru.json
client/src/pages/: Add.tsx  Dictionary.tsx  Home.tsx  Review.tsx  Settings.tsx
client/src/services/: translateApi.ts
client/src/test/: Add.test.tsx  Dictionary.test.tsx  Home.test.tsx  Layout.test.tsx  OfflineIndicator.test.tsx  Review.test.tsx  Settings.test.tsx  setup.ts  translateApi.test.ts
client/src/types/: index.ts  word.ts
i18n/: __init__.py  en.json  languages.py
lex/: .gitignore  KODA.md  Makefile  database.py  main.py  models.py  pyproject.toml  translator.py
lex/templates/: add.html  base.html
proxy/: Dockerfile  languages.py  main.py  requirements.txt
proxy/security/: rate_limiter.py
proxy/services/: translator.py
security/: __init__.py  auth.py  validators.py
services/: __init__.py  translator.py
templates/: add.html  base.html  dictionary.html  index.html  review.html  settings.html
tests/: conftest.py  test_auth.py  test_cache.py  test_csrf.py  test_database.py  test_i18n.py  test_main_routes.py  test_models.py  test_proxy.py  test_rate_limiter.py  test_translator.py  test_validators.py
translations/: __init__.py  en.json  ru.json
(+4 files in other folders)
