[project]
name = "lex"
version = "0.6.0"
description = "Словарь для запоминания иностранных слов с автопереводом через Yandex Translate"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.137",
    "jinja2>=3.1",
    "uvicorn>=0.49",
    "sqlalchemy>=2.0",
    "python-multipart>=0.0.32",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.2",
    "passlib[bcrypt]>=1.7.4",
    "tomli>=2.0.0; python_version<'3.11'",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.15",
]

[tool.ruff]
target-version = "py310"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]
