[project]
name = "lex"
version = "0.8.3"
description = "Web translator and vocabulary assistant with Yandex Translate API"
authors = [{name = "Andrey Bogatyrev", email = "donoriono@gmail.com"}]
readme = "README.md"
homepage = "https://lex.2-way.ru"
repository = "https://github.com/Onoiro/lex"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.137",
    "jinja2>=3.1",
    "uvicorn>=0.49",
    "sqlalchemy>=2.0",
    "python-multipart>=0.0.32",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.2",
    "passlib[bcrypt]>=1.7.4",
    "tomli>=2.0.0; python_version<'3.11'",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Natural Language :: Russian",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows"
]

[project.optional-dependencies]
dev = [
    "ruff>=0.15",
]

[tool.ruff]
target-version = "py310"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
]
