[project]
name = "lex"
version = "0.1.0"
description = "Словарь для запоминания иностранных слов"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.137",
    "jinja2>=3.1",
    "uvicorn>=0.49",
    "sqlalchemy>=2.0",
    "python-multipart>=0.0.32",
]

[tool.ruff]
target-version = "py310"
